Bug 1599799 - p1: check Java encoder existence before processing output. r=jya

Java callback runs on Android binder thread and can be preempted by
encoder task queue so that ProcessOutput() is queued after
ProcessShutdown(). Discard the output when that happens.

Differential Revision: https://phabricator.services.mozilla.com/D55759